tests/invalid/type/cast_byte_3_5.pts
function main() : void {
    byte b = (byte)3.5;
}
